fix select shasow on safari

--- a/src/app/analysis/components/serach/search.module.css
+++ b/src/app/analysis/components/serach/search.module.css
@@ -117,6 +117,10 @@
     width: 150px;
 }
 
+.sort_select select {
+    appearance: none;
+}
+
 .sort_select select, .sort_select select:focus {
     border: none;
     outline: none;
